# ramulator2-AES

./: README.md  aes_config.txt  aestest.trace  example_config_aes.yaml
src/: CMakeLists.txt
src/base/: request.h
src/dram_controller/: CMakeLists.txt
src/dram_controller/impl/scheduler/: aes_scheduler.cpp
src/dram_controller/plugins/encryption/: CMakeLists.txt  aes_config.h  aes_encryption_plugin.h  aes_engine.h  aes_plugin.h
src/dram_controller/plugins/encryption/impl/: aes_config.cpp  aes_encryption_plugin.cpp  aes_engine.cpp
src/frontend/impl/memory_trace/: readwrite_trace.cpp
